@startuml foco

class Usuario
class Foco{
    +Encender()
    +Apagar()
    +LeerEstado (): EstadoFoco
    -EstadoFoco estado
}
class EstadoFoco
class SerieFocos{
-Foco focos[10]
+ MostrarFocos()

}

Usuario o-- Foco
Foco *-- EstadoFoco
EstadoFoco --|> Booleano
Usuario o-- SerieFocos
EstadoFoco --|> Texto 

@enduml 